--- a/src/universidadejemplo/vistas/materiaVista.form
+++ b/src/universidadejemplo/vistas/materiaVista.form
@@ -46,7 +46,7 @@
                                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                           <Component id="textAño" max="32767" attributes="0"/>
                                           <Component id="textCodigo" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jRadioButton1" min="-2" pref="170" max="-2" attributes="0"/>
+                                          <Component id="botonEstado" min="-2" pref="170" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="32767" attributes="0"/>
                                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
@@ -93,7 +93,7 @@
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="botonEstado" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -177,7 +177,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="textA&#xf1;o">
     </Component>
-    <Component class="javax.swing.JRadioButton" name="jRadioButton1">
+    <Component class="javax.swing.JRadioButton" name="botonEstado">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
